VI-174 - better form layout

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "drupal/layout_plugin": "^1.0@alpha",
         "drupal/page_manager": "^4.0@beta",
         "drupal/entity_clone": "1.x-dev",
-        "drupal/coffee": "1.x-dev"
+        "drupal/coffee": "1.x-dev",
+        "drupal/field_group": "3.x-dev"
     },
     "repositories": [
         {
