--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -15,12 +15,71 @@ dependencies:
     - node.type.page
   module:
     - entity_browser
+    - field_group
     - inline_entity_form
     - metatag
     - paragraphs
     - path
     - text
     - workbench_moderation
+third_party_settings:
+  field_group:
+    group_banner:
+      children:
+        - field_page_main_image
+        - title
+      parent_name: ''
+      weight: 0
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Banner
+      region: content
+    group_content:
+      children:
+        - field_vih_course_heading
+        - field_vih_course_subheading
+        - body
+        - field_paragraphs
+      parent_name: ''
+      weight: 1
+      format_type: tab
+      format_settings:
+        label: Indhold
+        formatter: open
+        description: ''
+        required_fields: true
+        id: ''
+        classes: ''
+      label: Indhold
+      region: content
+    group_misc:
+      children:
+        - uid
+        - created
+        - langcode
+        - promote
+        - sticky
+        - path
+        - field_meta_tags
+        - translation
+        - scheduled_update
+        - status
+      parent_name: ''
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Andet
+      region: content
 _core:
   default_config_hash: TxhuWU1Nx6xQDpdGqYIme3ATgLWVCY3CNGvlJqndorw
 id: node.page.default
@@ -39,19 +98,19 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 8
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     region: content
   field_meta_tags:
     type: metatag_firehose
-    weight: 12
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     region: content
   field_page_main_image:
     type: entity_browser_file
-    weight: 0
+    weight: 1
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -63,15 +122,17 @@ content:
     third_party_settings: {  }
     region: content
   field_paragraphs:
-    type: entity_reference_paragraphs
+    type: paragraphs
     weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: 1_column_action_centered
     third_party_settings: {  }
     region: content
   field_vih_course_heading:
@@ -92,14 +153,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 7
+    weight: 5
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 11
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -107,12 +168,12 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 6
     third_party_settings: {  }
     region: content
   scheduled_update:
     type: inline_entity_form_complex
-    weight: 14
+    weight: 11
     settings:
       override_labels: false
       label_singular: ''
@@ -127,32 +188,32 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 26
+    weight: 12
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 10
+    weight: 7
     third_party_settings: {  }
     region: content
   title:
     type: string_textfield
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
   translation:
-    weight: 13
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
