--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -21,10 +21,86 @@ dependencies:
   module:
     - datetime
     - entity_browser
+    - field_group
     - paragraphs
     - path
     - text
     - workbench_moderation
+third_party_settings:
+  field_group:
+    group_banner:
+      children:
+        - title
+        - field_page_main_image
+      parent_name: ''
+      weight: 0
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Banner
+      region: content
+    group_content:
+      children:
+        - field_vih_course_heading
+        - field_vih_course_subheading
+        - body
+        - field_paragraphs
+        - field_image
+      parent_name: ''
+      weight: 1
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: Indhold
+      region: content
+    group_event_details:
+      children:
+        - field_vih_event_status
+        - field_event_start_date
+        - field_event_end_date
+        - field_event_price
+        - field_vih_cource_contact_person
+        - field_vih_event_persons_limit
+      parent_name: ''
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: 'Event detaljer'
+      region: content
+    group_misc:
+      children:
+        - langcode
+        - uid
+        - created
+        - promote
+        - sticky
+        - path
+        - status
+        - scheduled_update
+      parent_name: ''
+      weight: 4
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Andet
+      region: content
 id: node.event.default
 targetEntityType: node
 bundle: event
@@ -32,7 +108,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 11
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -46,27 +122,27 @@ content:
     third_party_settings: {  }
     region: content
   field_event_end_date:
-    weight: 14
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_event_price:
-    weight: 16
+    weight: 6
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_event_start_date:
-    weight: 13
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_image:
     type: entity_browser_file
-    weight: 12
+    weight: 6
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -79,7 +155,7 @@ content:
     region: content
   field_page_main_image:
     type: entity_browser_file
-    weight: 15
+    weight: 2
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -91,19 +167,21 @@ content:
     third_party_settings: {  }
     region: content
   field_paragraphs:
-    weight: 17
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: 1_column_action_centered
     third_party_settings: {  }
-    type: entity_reference_paragraphs
+    type: paragraphs
     region: content
   field_vih_cource_contact_person:
-    weight: 19
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -112,14 +190,6 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_course_heading:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_vih_course_subheading:
     weight: 2
     settings:
       size: 60
@@ -127,8 +197,16 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vih_course_subheading:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_vih_event_persons_limit:
-    weight: 5
+    weight: 8
     settings:
       placeholder: ''
     third_party_settings: {  }
@@ -142,7 +220,7 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 4
+    weight: 5
     settings:
       include_locked: true
     third_party_settings: {  }
@@ -161,7 +239,7 @@ content:
     third_party_settings: {  }
     region: content
   scheduled_update:
-    weight: 27
+    weight: 12
     settings:
       match_operator: CONTAINS
       size: 60
@@ -173,7 +251,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 26
+    weight: 11
     third_party_settings: {  }
     region: content
   sticky:
@@ -185,7 +263,7 @@ content:
     region: content
   title:
     type: string_textfield
-    weight: 0
+    weight: 1
     settings:
       size: 60
       placeholder: ''
