--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -6,17 +6,75 @@ dependencies:
     - entity_browser.browser.image_browser
     - field.field.node.news.body
     - field.field.node.news.field_image
-    - field.field.node.news.field_news_paragraph
     - field.field.node.news.field_news_tags
     - field.field.node.news.field_page_main_image
+    - field.field.node.news.field_paragraphs
     - field.field.node.news.scheduled_update
     - node.type.news
   module:
     - entity_browser
+    - field_group
+    - inline_entity_form
     - paragraphs
     - path
     - text
     - workbench_moderation
+third_party_settings:
+  field_group:
+    group_banner:
+      children:
+        - field_page_main_image
+        - field_image
+        - title
+      parent_name: ''
+      weight: 0
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Banner
+      region: content
+    group_content:
+      children:
+        - body
+        - field_paragraphs
+        - field_news_tags
+      parent_name: ''
+      weight: 1
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: Indhold
+      region: content
+    group_misc:
+      children:
+        - langcode
+        - uid
+        - created
+        - translation
+        - promote
+        - sticky
+        - path
+        - status
+        - scheduled_update
+      parent_name: ''
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Andet
+      region: content
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -24,7 +82,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 12
     settings:
       rows: 9
       summary_rows: 3
@@ -33,13 +91,13 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     region: content
   field_image:
     type: entity_browser_file
-    weight: 32
+    weight: 14
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -50,20 +108,8 @@ content:
       selection_mode: selection_append
     third_party_settings: {  }
     region: content
-  field_news_paragraph:
-    type: entity_reference_paragraphs
-    weight: 35
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
-    third_party_settings: {  }
-    region: content
   field_news_tags:
-    weight: 33
+    weight: 15
     settings:
       match_operator: CONTAINS
       size: 60
@@ -73,7 +119,7 @@ content:
     region: content
   field_page_main_image:
     type: entity_browser_file
-    weight: 34
+    weight: 13
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -84,16 +130,30 @@ content:
       selection_mode: selection_append
     third_party_settings: {  }
     region: content
+  field_paragraphs:
+    weight: 14
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
+      form_display_mode: default
+      default_paragraph_type: 1_column_action_centered
+    third_party_settings: {  }
+    type: paragraphs
+    region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 3
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 30
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -101,46 +161,52 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 7
     third_party_settings: {  }
     region: content
   scheduled_update:
-    weight: 122
+    weight: 11
     settings:
       match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      form_mode: default
+      override_labels: false
+      label_singular: ''
+      label_plural: ''
+      allow_new: true
+      allow_existing: false
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: inline_entity_form_complex
     region: content
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 121
+    weight: 10
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 8
     third_party_settings: {  }
     region: content
   title:
     type: string_textfield
-    weight: -5
+    weight: 15
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
   translation:
-    weight: 10
+    weight: 6
     region: content
+    settings: {  }
+    third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 4
     settings:
       match_operator: CONTAINS
       size: 60
