--- a/config/sync/core.entity_form_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_short_course.default.yml
@@ -21,11 +21,88 @@ dependencies:
   module:
     - datetime
     - entity_browser
+    - field_group
     - inline_entity_form
     - paragraphs
     - path
     - text
     - workbench_moderation
+third_party_settings:
+  field_group:
+    group_banner:
+      children:
+        - title
+        - field_vih_sc_image
+      parent_name: ''
+      weight: 0
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Banner
+      region: content
+    group_content:
+      children:
+        - field_vih_course_heading
+        - field_vih_course_subheading
+        - body
+        - field_paragraphs
+      parent_name: ''
+      weight: 1
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Indhold
+      region: content
+    group_misc:
+      children:
+        - langcode
+        - uid
+        - created
+        - translation
+        - promote
+        - sticky
+        - path
+        - scheduled_update
+        - status
+      parent_name: ''
+      weight: 3
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Andet
+      region: content
+    group_course_details:
+      children:
+        - field_vih_sc_status
+        - field_vih_sc_start_date
+        - field_vih_sc_end_date
+        - field_vih_sc_price
+        - field_vih_sc_option_groups
+        - field_vih_cs_contact_person
+        - field_vih_sc_persons_limit
+      parent_name: ''
+      weight: 2
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: 'Kursus detaljer'
+      region: content
 id: node.vih_short_course.default
 targetEntityType: node
 bundle: vih_short_course
@@ -33,7 +110,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 11
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -42,31 +119,25 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     region: content
   field_paragraphs:
-    weight: 16
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
-      default_paragraph_type: _none
+      default_paragraph_type: vih_webform
     third_party_settings: {  }
-    type: entity_reference_paragraphs
+    type: paragraphs
     region: content
   field_vih_course_heading:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_vih_course_subheading:
     weight: 2
     settings:
       size: 60
@@ -74,8 +145,16 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vih_course_subheading:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_vih_cs_contact_person:
-    weight: 14
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -84,14 +163,14 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_sc_end_date:
-    weight: 19
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_vih_sc_image:
     type: entity_browser_file
-    weight: 15
+    weight: 4
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -103,33 +182,35 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_sc_option_groups:
-    type: entity_reference_paragraphs
-    weight: 13
+    type: paragraphs
+    weight: 7
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: vih_option_group
     third_party_settings: {  }
     region: content
   field_vih_sc_persons_limit:
-    weight: 21
+    weight: 9
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_sc_price:
-    weight: 12
+    weight: 6
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_sc_start_date:
-    weight: 18
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
@@ -161,7 +242,7 @@ content:
     third_party_settings: {  }
     region: content
   scheduled_update:
-    weight: 17
+    weight: 11
     settings:
       form_mode: default
       override_labels: false
@@ -177,7 +258,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 26
+    weight: 12
     third_party_settings: {  }
     region: content
   sticky:
@@ -189,14 +270,14 @@ content:
     region: content
   title:
     type: string_textfield
-    weight: 0
+    weight: 3
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
   translation:
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
