--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -5,9 +5,9 @@ dependencies:
   config:
     - field.field.node.news.body
     - field.field.node.news.field_image
-    - field.field.node.news.field_news_paragraph
     - field.field.node.news.field_news_tags
     - field.field.node.news.field_page_main_image
+    - field.field.node.news.field_paragraphs
     - field.field.node.news.scheduled_update
     - node.type.news
   module:
@@ -43,15 +43,6 @@ content:
     third_party_settings: {  }
     type: image
     region: content
-  field_news_paragraph:
-    type: entity_reference_revisions_entity_view
-    weight: 4
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
   field_news_tags:
     weight: 3
     label: above
@@ -59,6 +50,15 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_paragraphs:
+    weight: 6
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
     region: content
   links:
     weight: 0
