--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -6,9 +6,10 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.body
     - field.field.node.news.field_image
-    - field.field.node.news.field_news_paragraph
     - field.field.node.news.field_news_tags
     - field.field.node.news.field_page_main_image
+    - field.field.node.news.field_paragraphs
+    - field.field.node.news.scheduled_update
     - node.type.news
   module:
     - panelizer
@@ -35,8 +36,9 @@ content:
     region: content
 hidden:
   field_image: true
-  field_news_paragraph: true
   field_news_tags: true
   field_page_main_image: true
+  field_paragraphs: true
   langcode: true
   links: true
+  scheduled_update: true
