--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.node.event.field_vih_event_persons_limit
     - field.field.node.event.field_vih_event_status
     - field.field.node.event.scheduled_update
+    - image.style.banner_small
     - node.type.event
   module:
     - datetime
@@ -81,6 +82,15 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_page_main_image:
+    type: image
+    weight: 13
+    region: content
+    label: hidden
+    settings:
+      image_style: banner_small
+      image_link: ''
+    third_party_settings: {  }
   field_paragraphs:
     weight: 7
     label: hidden
@@ -138,12 +148,11 @@ content:
     third_party_settings: {  }
   scheduled_update:
     weight: 12
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
 hidden:
-  field_page_main_image: true
   langcode: true
