--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.news.field_page_main_image
     - field.field.node.news.field_paragraphs
     - field.field.node.news.scheduled_update
+    - image.style.banner_small
     - node.type.news
   module:
     - entity_reference_revisions
@@ -30,29 +31,38 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 1
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     region: content
   field_image:
-    weight: 2
-    label: above
+    weight: 3
+    label: hidden
     settings:
-      image_style: ''
+      image_style: banner_small
       image_link: ''
     third_party_settings: {  }
     type: image
     region: content
   field_news_tags:
-    weight: 3
-    label: above
+    weight: 4
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_page_main_image:
+    type: image
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      image_style: banner_small
+      image_link: ''
+    third_party_settings: {  }
   field_paragraphs:
-    weight: 6
+    weight: 5
     label: hidden
     settings:
       view_mode: default
@@ -61,18 +71,10 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   links:
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
-  scheduled_update:
-    weight: 5
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
 hidden:
-  field_page_main_image: true
   langcode: true
+  scheduled_update: true
