--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -11,9 +11,11 @@ dependencies:
     - field.field.node.page.field_vih_course_subheading
     - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
+    - image.style.banner_small
     - node.type.page
   module:
     - entity_reference_revisions
+    - image
     - metatag
     - panelizer
     - text
@@ -34,20 +36,29 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 1
+    weight: 0
     settings: {  }
     third_party_settings: {  }
     region: content
   field_meta_tags:
     type: metatag_empty_formatter
-    weight: 3
+    weight: 2
     label: above
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_page_main_image:
+    type: image
+    weight: 6
+    region: content
+    label: hidden
+    settings:
+      image_style: banner_small
+      image_link: ''
+    third_party_settings: {  }
   field_paragraphs:
     type: entity_reference_revisions_entity_view
-    weight: 4
+    weight: 3
     label: hidden
     settings:
       view_mode: default
@@ -55,33 +66,32 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_course_heading:
-    weight: 5
-    label: above
+    weight: 4
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
   field_vih_course_subheading:
-    weight: 6
-    label: above
+    weight: 5
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
   links:
-    weight: 2
+    weight: 1
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   workbench_moderation_control:
     weight: 0
     settings: {  }
     third_party_settings: {  }
     region: content
 hidden:
-  field_page_main_image: true
   langcode: true
   panelizer: true
   scheduled_update: true
