--- a/config/sync/field.field.node.news.field_paragraphs.yml
+++ b/config/sync/field.field.node.news.field_paragraphs.yml
@@ -6,7 +6,16 @@ dependencies:
     - field.storage.node.field_paragraphs
     - node.type.news
     - paragraphs.paragraphs_type.1_column_action_centered
+    - paragraphs.paragraphs_type.class_packages
+    - paragraphs.paragraphs_type.event_list
+    - paragraphs.paragraphs_type.file
+    - paragraphs.paragraphs_type.list_of_news_teasers
+    - paragraphs.paragraphs_type.long_course_list_
+    - paragraphs.paragraphs_type.short_course_list_
     - paragraphs.paragraphs_type.user_quote
+    - paragraphs.paragraphs_type.video
+    - paragraphs.paragraphs_type.vih_class_groups_accordion
+    - paragraphs.paragraphs_type.vih_single_class_group
     - paragraphs.paragraphs_type.vih_webform
   module:
     - entity_reference_revisions
@@ -26,27 +35,36 @@ settings:
     negate: 0
     target_bundles:
       1_column_action_centered: 1_column_action_centered
+      class_packages: class_packages
+      event_list: event_list
+      file: file
+      list_of_news_teasers: list_of_news_teasers
+      long_course_list_: long_course_list_
+      short_course_list_: short_course_list_
       user_quote: user_quote
+      video: video
+      vih_class_groups_accordion: vih_class_groups_accordion
+      vih_single_class_group: vih_single_class_group
       vih_webform: vih_webform
     target_bundles_drag_drop:
       1_column_action_centered:
         enabled: true
         weight: 24
       class_packages:
+        enabled: true
         weight: 25
-        enabled: false
       event_list:
+        enabled: true
         weight: 26
-        enabled: false
       file:
+        enabled: true
         weight: 27
-        enabled: false
       list_of_news_teasers:
+        enabled: true
         weight: 28
-        enabled: false
       long_course_list_:
+        enabled: true
         weight: 29
-        enabled: false
       news_list:
         weight: 30
         enabled: false
@@ -54,17 +72,17 @@ settings:
         weight: 31
         enabled: false
       short_course_list_:
+        enabled: true
         weight: 32
-        enabled: false
       user_quote:
         enabled: true
         weight: 33
       video:
+        enabled: true
         weight: 34
-        enabled: false
       vih_class_groups_accordion:
+        enabled: true
         weight: 35
-        enabled: false
       vih_course_slot:
         weight: 36
         enabled: false
@@ -90,8 +108,8 @@ settings:
         weight: 43
         enabled: false
       vih_single_class_group:
+        enabled: true
         weight: 44
-        enabled: false
       vih_teacher_class_description:
         weight: 45
         enabled: false
