--- a/config/sync/field.field.node.vih_long_cource.field_paragraphs.yml
+++ b/config/sync/field.field.node.vih_long_cource.field_paragraphs.yml
@@ -5,6 +5,18 @@ dependencies:
   config:
     - field.storage.node.field_paragraphs
     - node.type.vih_long_cource
+    - paragraphs.paragraphs_type.1_column_action_centered
+    - paragraphs.paragraphs_type.class_packages
+    - paragraphs.paragraphs_type.event_list
+    - paragraphs.paragraphs_type.file
+    - paragraphs.paragraphs_type.list_of_news_teasers
+    - paragraphs.paragraphs_type.long_course_list_
+    - paragraphs.paragraphs_type.short_course_list_
+    - paragraphs.paragraphs_type.user_quote
+    - paragraphs.paragraphs_type.video
+    - paragraphs.paragraphs_type.vih_class_groups_accordion
+    - paragraphs.paragraphs_type.vih_single_class_group
+    - paragraphs.paragraphs_type.vih_webform
   module:
     - entity_reference_revisions
 id: node.vih_long_cource.field_paragraphs
@@ -20,23 +32,36 @@ default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
-    target_bundles: null
+    negate: 0
+    target_bundles:
+      1_column_action_centered: 1_column_action_centered
+      class_packages: class_packages
+      list_of_news_teasers: list_of_news_teasers
+      video: video
+      event_list: event_list
+      file: file
+      long_course_list_: long_course_list_
+      short_course_list_: short_course_list_
+      user_quote: user_quote
+      vih_class_groups_accordion: vih_class_groups_accordion
+      vih_single_class_group: vih_single_class_group
+      vih_webform: vih_webform
     target_bundles_drag_drop:
       1_column_action_centered:
+        enabled: true
         weight: 13
-        enabled: false
       class_packages:
+        enabled: true
         weight: 14
-        enabled: false
       list_of_news_teasers:
+        enabled: true
         weight: 15
-        enabled: false
       page_content:
         weight: 16
         enabled: false
       video:
+        enabled: true
         weight: 17
-        enabled: false
       vih_course_slot:
         weight: 18
         enabled: false
@@ -58,4 +83,37 @@ settings:
       vih_teacher_class_description:
         weight: 24
         enabled: false
+      event_list:
+        enabled: true
+        weight: 26
+      file:
+        enabled: true
+        weight: 27
+      long_course_list_:
+        enabled: true
+        weight: 29
+      news_list:
+        weight: 30
+        enabled: false
+      short_course_list_:
+        enabled: true
+        weight: 32
+      user_quote:
+        enabled: true
+        weight: 33
+      vih_class_groups_accordion:
+        enabled: true
+        weight: 35
+      vih_ordered_course_person:
+        weight: 40
+        enabled: false
+      vih_ordered_event_person:
+        weight: 42
+        enabled: false
+      vih_single_class_group:
+        enabled: true
+        weight: 44
+      vih_webform:
+        enabled: true
+        weight: 46
 field_type: entity_reference_revisions
