--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -93,6 +93,7 @@ module:
   user: 0
   video_embed_field: 0
   video_embed_media: 0
+  video_embed_wysiwyg: 0
   views_infinite_scroll: 0
   views_ui: 0
   viewsreference: 0
