--- a/config/sync/core.base_field_override.node.news.title.yml
+++ b/config/sync/core.base_field_override.node.news.title.yml
@@ -8,7 +8,7 @@ id: node.news.title
 field_name: title
 entity_type: node
 bundle: news
-label: Overskrift
+label: 'Tekst på banner'
 description: ''
 required: true
 translatable: true
