--- a/config/sync/core.base_field_override.node.vih_short_course.title.yml
+++ b/config/sync/core.base_field_override.node.vih_short_course.title.yml
@@ -8,7 +8,7 @@ id: node.vih_short_course.title
 field_name: title
 entity_type: node
 bundle: vih_short_course
-label: Title
+label: 'Tekst på banner'
 description: ''
 required: true
 translatable: true
