--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -5,11 +5,11 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.node.event.body
+    - field.field.node.event.field_banner
     - field.field.node.event.field_event_end_date
     - field.field.node.event.field_event_price
     - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
-    - field.field.node.event.field_page_main_image
     - field.field.node.event.field_paragraphs
     - field.field.node.event.field_vih_cource_contact_person
     - field.field.node.event.field_vih_course_heading
@@ -31,6 +31,7 @@ third_party_settings:
     group_banner:
       children:
         - title
+        - field_banner
         - field_page_main_image
       parent_name: ''
       weight: 0
@@ -45,11 +46,11 @@ third_party_settings:
       region: content
     group_content:
       children:
+        - field_image
         - field_vih_course_heading
         - field_vih_course_subheading
         - body
         - field_paragraphs
-        - field_image
       parent_name: ''
       weight: 1
       format_type: tab
@@ -108,7 +109,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 4
+    weight: 10
     settings:
       rows: 9
       summary_rows: 3
@@ -121,6 +122,19 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_banner:
+    type: entity_browser_file
+    weight: 2
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
   field_event_end_date:
     weight: 5
     settings: {  }
@@ -142,20 +156,7 @@ content:
     region: content
   field_image:
     type: entity_browser_file
-    weight: 6
-    settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
-    third_party_settings: {  }
-    region: content
-  field_page_main_image:
-    type: entity_browser_file
-    weight: 2
+    weight: 7
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -167,7 +168,7 @@ content:
     third_party_settings: {  }
     region: content
   field_paragraphs:
-    weight: 5
+    weight: 11
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -181,7 +182,7 @@ content:
     type: paragraphs
     region: content
   field_vih_cource_contact_person:
-    weight: 7
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -190,7 +191,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_course_heading:
-    weight: 2
+    weight: 8
     settings:
       size: 60
       placeholder: ''
@@ -198,7 +199,7 @@ content:
     type: string_textfield
     region: content
   field_vih_course_subheading:
-    weight: 3
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -206,7 +207,7 @@ content:
     type: string_textfield
     region: content
   field_vih_event_persons_limit:
-    weight: 8
+    weight: 9
     settings:
       placeholder: ''
     third_party_settings: {  }
