--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -5,9 +5,9 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.node.news.body
+    - field.field.node.news.field_banner
     - field.field.node.news.field_image
     - field.field.node.news.field_news_tags
-    - field.field.node.news.field_page_main_image
     - field.field.node.news.field_paragraphs
     - field.field.node.news.scheduled_update
     - node.type.news
@@ -24,8 +24,7 @@ third_party_settings:
     group_banner:
       children:
         - title
-        - field_page_main_image
-        - field_image
+        - field_banner
       parent_name: ''
       weight: 0
       format_type: tab
@@ -39,6 +38,7 @@ third_party_settings:
       region: content
     group_content:
       children:
+        - field_image
         - body
         - field_paragraphs
         - field_news_tags
@@ -82,7 +82,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 12
+    weight: 19
     settings:
       rows: 9
       summary_rows: 3
@@ -95,9 +95,22 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_banner:
+    type: entity_browser_file
+    weight: 16
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_image:
     type: entity_browser_file
-    weight: 17
+    weight: 18
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -109,7 +122,7 @@ content:
     third_party_settings: {  }
     region: content
   field_news_tags:
-    weight: 15
+    weight: 21
     settings:
       match_operator: CONTAINS
       size: 60
@@ -117,21 +130,8 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  field_page_main_image:
-    type: entity_browser_file
-    weight: 16
-    settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
-    third_party_settings: {  }
-    region: content
   field_paragraphs:
-    weight: 14
+    weight: 20
     settings:
       title: Paragraph
       title_plural: Paragraphs
