--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -5,8 +5,8 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.node.page.body
+    - field.field.node.page.field_banner
     - field.field.node.page.field_meta_tags
-    - field.field.node.page.field_page_main_image
     - field.field.node.page.field_paragraphs
     - field.field.node.page.field_vih_course_heading
     - field.field.node.page.field_vih_course_subheading
@@ -28,6 +28,7 @@ third_party_settings:
       children:
         - field_page_main_image
         - title
+        - field_banner
       parent_name: ''
       weight: 0
       format_type: tab
@@ -102,15 +103,9 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_meta_tags:
-    type: metatag_firehose
-    weight: 9
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-  field_page_main_image:
+  field_banner:
     type: entity_browser_file
-    weight: 1
+    weight: 29
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -119,6 +114,12 @@ content:
       preview_image_style: thumbnail
       open: true
       selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
+  field_meta_tags:
+    type: metatag_firehose
+    weight: 9
+    settings: {  }
     third_party_settings: {  }
     region: content
   field_paragraphs:
@@ -200,7 +201,7 @@ content:
     region: content
   title:
     type: string_textfield
-    weight: 2
+    weight: 28
     settings:
       size: 60
       placeholder: ''
