--- a/config/sync/core.entity_form_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_short_course.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.node.vih_short_course.body
+    - field.field.node.vih_short_course.field_banner
     - field.field.node.vih_short_course.field_paragraphs
     - field.field.node.vih_short_course.field_vih_course_heading
     - field.field.node.vih_short_course.field_vih_course_subheading
@@ -32,7 +33,7 @@ third_party_settings:
     group_banner:
       children:
         - title
-        - field_vih_sc_image
+        - field_banner
       parent_name: ''
       weight: 0
       format_type: tab
@@ -85,6 +86,7 @@ third_party_settings:
       region: content
     group_course_details:
       children:
+        - field_vih_sc_image
         - field_vih_sc_status
         - field_vih_sc_start_date
         - field_vih_sc_end_date
@@ -110,7 +112,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 4
+    weight: 8
     settings:
       rows: 9
       summary_rows: 3
@@ -123,8 +125,21 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_banner:
+    type: entity_browser_file
+    weight: 4
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_paragraphs:
-    weight: 5
+    weight: 9
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -138,7 +153,7 @@ content:
     type: paragraphs
     region: content
   field_vih_course_heading:
-    weight: 2
+    weight: 6
     settings:
       size: 60
       placeholder: ''
@@ -146,7 +161,7 @@ content:
     type: string_textfield
     region: content
   field_vih_course_subheading:
-    weight: 3
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -154,7 +169,7 @@ content:
     type: string_textfield
     region: content
   field_vih_cs_contact_person:
-    weight: 8
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
@@ -163,14 +178,14 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_sc_end_date:
-    weight: 5
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_vih_sc_image:
     type: entity_browser_file
-    weight: 4
+    weight: 5
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -183,7 +198,7 @@ content:
     region: content
   field_vih_sc_option_groups:
     type: paragraphs
-    weight: 7
+    weight: 10
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -196,27 +211,27 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_sc_persons_limit:
-    weight: 9
+    weight: 12
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_sc_price:
-    weight: 6
+    weight: 9
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_vih_sc_start_date:
-    weight: 4
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_vih_sc_status:
-    weight: 3
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: options_select
