--- a/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
+++ b/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
@@ -5,17 +5,18 @@ dependencies:
   config:
     - core.entity_view_mode.node.embedded_teaser_list
     - field.field.node.event.body
+    - field.field.node.event.field_banner
     - field.field.node.event.field_event_end_date
     - field.field.node.event.field_event_price
     - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
-    - field.field.node.event.field_page_main_image
     - field.field.node.event.field_paragraphs
     - field.field.node.event.field_vih_cource_contact_person
     - field.field.node.event.field_vih_course_heading
     - field.field.node.event.field_vih_course_subheading
     - field.field.node.event.field_vih_event_persons_limit
     - field.field.node.event.field_vih_event_status
+    - field.field.node.event.scheduled_update
     - image.style.vih_event_teaser
     - node.type.event
   module:
@@ -70,8 +71,8 @@ content:
     type: image
     region: content
 hidden:
+  field_banner: true
   field_event_price: true
-  field_page_main_image: true
   field_paragraphs: true
   field_vih_cource_contact_person: true
   field_vih_course_heading: true
@@ -80,3 +81,4 @@ hidden:
   field_vih_event_status: true
   langcode: true
   links: true
+  scheduled_update: true
