--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.news.body
+    - field.field.node.news.field_banner
     - field.field.node.news.field_image
     - field.field.node.news.field_news_tags
-    - field.field.node.news.field_page_main_image
     - field.field.node.news.field_paragraphs
     - field.field.node.news.scheduled_update
     - image.style.banner_small
@@ -35,6 +35,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_banner:
+    weight: 6
+    label: hidden
+    settings:
+      image_style: banner_small
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_image:
     weight: 3
     label: hidden
@@ -52,15 +61,6 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_page_main_image:
-    type: image
-    weight: 0
-    region: content
-    label: hidden
-    settings:
-      image_style: banner_small
-      image_link: ''
-    third_party_settings: {  }
   field_paragraphs:
     weight: 5
     label: hidden
