--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -5,9 +5,9 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.body
+    - field.field.node.news.field_banner
     - field.field.node.news.field_image
     - field.field.node.news.field_news_tags
-    - field.field.node.news.field_page_main_image
     - field.field.node.news.field_paragraphs
     - field.field.node.news.scheduled_update
     - node.type.news
@@ -35,9 +35,9 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_banner: true
   field_image: true
   field_news_tags: true
-  field_page_main_image: true
   field_paragraphs: true
   langcode: true
   links: true
